syntax = "proto3";

package chatroom.msgpb;

message AddFriendAck {
    bool success = 1;
    string errmsg = 2;
}